Fix nav/hero-banner on small height devices

--- a/css/style.css
+++ b/css/style.css
@@ -86,8 +86,8 @@ nav {
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 1.5rem 0;
-    gap: 2rem;
+    padding: 1rem 0;
+    gap: 1rem;
 }
 
 a {
@@ -98,7 +98,7 @@ a {
 nav a {
     color: #000;
     font-weight: 600;
-    padding: 1rem 1.5rem;
+    padding: 0.8rem 1.5rem;
 }
 
 nav a,
@@ -154,15 +154,14 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: calc(100vh - 20.5rem);
+    min-height: calc(100vh - 16.9rem);
     background-image: url('../src/img/background.webp');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     color: #fff;
     text-align: center;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding: 4rem 3rem;
     font-size: 2.5rem;
 }
 
